# hangups-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  codegen.py  libhangups.py
src/: auth.rs  channel.rs  channel_parser.rs  decoder.rs  example.proto  hangouts.proto  lib.rs  pblite.rs  proto.rs
