[package]
name = "hangups"
version = "0.1.0"
authors = ["Tom Dryer <tomdryer.com@gmail.com>"]
license = "MIT"

[lib]
name = "hangups"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
assert_matches = "1.1.0"
base64 = "0.9.0"
serde = "1.0.27"
serde_derive = "1.0.27"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
hyper-tls = "0.1.2"
time = "0.1"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
sha1 = { version = "0.6.0", features = ["std"] }
native-tls = "0.1"
error-chain = "0.11.0"
